# md4c

./: .gitignore  Cargo.toml
md4c-rs/: Cargo.toml  README.md  build.rs
md4c-rs/benches/: parsing.rs
md4c-rs/src/: html.rs  lib.rs  parser.rs  sys.rs  types.rs
ratatui-md/: Cargo.toml  README.md
ratatui-md/examples/: demo.rs  scrollable.rs
ratatui-md/src/: highlight.rs  lib.rs  renderer.rs  theme.rs  widget.rs
